Fix - add horizontal scroll for design-grid

--- a/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/design-view.css
+++ b/components/org.wso2.carbon.siddhi.editor.core/src/main/resources/web/css/design-view.css
@@ -1473,6 +1473,7 @@ label.option-name {
 
 .design-view-form-content {
     min-width: 1920px;
+    overflow-x: unset;
 }
 
 .nano > .nano-content {
